[package]
name = "clavem"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "Local proxy for the Anthropic Claude API that records per-model token usage."
repository = "https://github.com/cienvita/clavem"

[dependencies]
anyhow = "1"
async-stream = "0.3"
axum = "0.8"
bytes = "1"
clap = { version = "4", features = ["derive"] }
futures-util = "0.3"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "stream"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
